--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spargat Group - We're Moving!</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
-            --dark-bg: #121212; /* Very dark gray, almost black */
-            --text-color: #E0E0E0; /* Light gray for text */
-            --accent-color: #BB86FC; /* A subtle purple accent, can be your primary */
+            --dark-bg: #121212;
+            --text-color: #E0E0E0;
+            --icon-color: #A0A8C0; /* Muted color for icons */
+            --icon-hover-color: #FFFFFF; /* Brighter on hover */
+            --spargat-primary: #7950F2; /* Spargat primary for potential hover accent */
         }
 
         * {
@@ -21,7 +25,8 @@
         html, body {
             height: 100%;
             width: 100%;
-            overflow: hidden; /* Prevent scrollbars on this simple page */
+            /* Allow scroll if content + icons exceed viewport height, especially on small screens */
+            /* overflow: hidden; -- Removed for potential scroll with icons */
         }
 
         body {
@@ -29,22 +34,27 @@
             background-color: var(--dark-bg);
             color: var(--text-color);
             display: flex;
-            flex-direction: column; /* Stack main content and optional video area */
+            flex-direction: column;
             align-items: center;
-            justify-content: center; /* Center main content vertically */
+            justify-content: center; /* Center main content */
             text-align: center;
             padding: 2rem;
+            position: relative; /* For positioning social links at bottom */
         }
 
         .main-content {
-            /* This will be centered by the body's flex properties */
+            flex-grow: 1; /* Allow main content to take space */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
 
         .logo {
-            width: 100px; /* Adjust size as needed */
+            width: 100px;
             height: 100px;
             margin-bottom: 1.5rem;
-            border-radius: 12px; /* Optional: if you want rounded corners for the logo image */
+            border-radius: 12px;
             box-shadow: 0 4px 15px rgba(0,0,0, 0.2);
         }
 
@@ -57,32 +67,40 @@
 
         p.message {
             font-size: clamp(1rem, 2.5vw, 1.25rem);
-            color: var(--medium-text, #A0A8C0); /* Fallback if --medium-text not defined */
+            color: var(--icon-color); /* Using icon color for consistency */
             max-width: 500px;
             line-height: 1.6;
+            margin-bottom: 2rem; /* Add some space before social links */
         }
 
-        .video-placeholder-container {
-            position: fixed; /* Fixed position like in the screenshot */
-            bottom: 20px;
-            right: 20px;
-            width: 320px; /* Example width */
-            height: 180px; /* Example height (16:9 aspect ratio) */
-            background-color: #1E1E1E; /* Darker than body for contrast */
-            border: 1px solid #333;
-            border-radius: 8px;
-            box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+        .social-links-container {
+            /* position: absolute;
+            bottom: 2rem;
+            left: 50%;
+            transform: translateX(-50%); */
+            /* Or just let it flow after main content */
             display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #666;
-            font-size: 0.9rem;
-            padding: 1rem;
-            text-align: center;
+            gap: 1.5rem; /* Space between icons */
+            margin-top: auto; /* Pushes to bottom if body is flex column and main-content grows */
+            padding-top: 2rem; /* Space above if it flows */
         }
-         .video-placeholder-container p {
-            margin: 0;
+
+        .social-icon {
+            color: var(--icon-color);
+            font-size: 1.8rem; /* Size of the icons */
+            text-decoration: none;
+            transition: color 0.3s ease, transform 0.3s ease;
         }
+
+        .social-icon:hover {
+            color: var(--icon-hover-color);
+            transform: translateY(-3px);
+        }
+        /* Optional: Specific hover colors */
+        .social-icon.discord:hover { color: #5865F2; }
+        .social-icon.itch-io:hover { color: #fa5c5c; }
+        .social-icon.youtube:hover { color: #FF0000; }
+        .social-icon.twitter-x:hover { color: #000000; background-color: #fff; border-radius: 4px; padding: 0.1em;} /* X specific style */
 
 
         @media (max-width: 768px) {
@@ -90,24 +108,22 @@
                 width: 80px;
                 height: 80px;
             }
-            .video-placeholder-container {
-                /* On smaller screens, you might want to hide it or make it smaller/full-width at bottom */
-                width: 90%;
-                max-width: 300px;
-                height: auto;
-                aspect-ratio: 16 / 9;
-                bottom: 10px;
-                left: 50%;
-                transform: translateX(-50%);
-                right: auto;
+            .social-links-container {
+                gap: 1.2rem;
+                /* margin-top: 2rem; Ensure some space if not using absolute positioning */
+            }
+            .social-icon {
+                font-size: 1.6rem;
             }
         }
          @media (max-width: 480px) {
-            .video-placeholder-container {
-                font-size: 0.8rem;
+            .social-links-container {
+                gap: 1rem;
+            }
+            .social-icon {
+                font-size: 1.5rem;
             }
         }
-
     </style>
 </head>
 <body>
@@ -117,11 +133,20 @@
         <p class="message">We are moving. We'll be back soon!</p>
     </div>
 
-    <div class="video-placeholder-container">
-        <p>Video content coming soon or promotional video here.</p>
-        <!-- Or, if you have a video:
-        <iframe width="100%" height="100%" src="YOUR_YOUTUBE_EMBED_LINK_HERE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        -->
+    <div class="social-links-container">
+        <a href="https://discord.gg/PqZtGn3HMn" target="_blank" rel="noopener noreferrer" class="social-icon discord" title="Discord">
+            <i class="fab fa-discord"></i>
+        </a>
+        <a href="https://spargat.itch.io/" target="_blank" rel="noopener noreferrer" class="social-icon itch-io" title="Itch.io">
+            <i class="fab fa-itch-io"></i>
+        </a>
+        <a href="https://youtube.com/@BlockmanLauncher" target="_blank" rel="noopener noreferrer" class="social-icon youtube" title="YouTube">
+            <i class="fab fa-youtube"></i>
+        </a>
+        <a href="https://x.com/BlockmanProject" target="_blank" rel="noopener noreferrer" class="social-icon twitter-x" title="X (Twitter)">
+            <i class="fab fa-xing"></i> <!-- Font Awesome uses fa-xing for X logo, or fa-twitter for old bird -->
+            <!-- Or for the newer X logo if available in your FA version, or use an SVG/image -->
+        </a>
     </div>
 
 </body>
