--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         }
 
         .logo {
-            width: 100px;
-            height: 100px;
+            width: auto;
+            height: auto;
             margin-bottom: 1.5rem;
             border-radius: 12px;
             box-shadow: 0 4px 15px rgba(0,0,0, 0.2);
@@ -143,8 +143,8 @@
         <a href="https://youtube.com/@BlockmanLauncher" target="_blank" rel="noopener noreferrer" class="social-icon youtube" title="YouTube">
             <i class="fab fa-youtube"></i>
         </a>
-        <a href="https://x.com/BlockmanProject" target="_blank" rel="noopener noreferrer" class="social-icon twitter-x" title="X (Twitter)">
-            <i class="fab fa-xing"></i> <!-- Font Awesome uses fa-xing for X logo, or fa-twitter for old bird -->
+        <a href="https://x.com/BlockmanProject" target="_blank" rel="noopener noreferrer" class="social-icon twitter" title="X (Twitter)">
+            <i class="fab fa-twitter"></i> <!-- Font Awesome uses fa-xing for X logo, or fa-twitter for old bird -->
             <!-- Or for the newer X logo if available in your FA version, or use an SVG/image -->
         </a>
     </div>
