--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@
         .social-icon.discord:hover { color: #5865F2; }
         .social-icon.itch-io:hover { color: #fa5c5c; }
         .social-icon.youtube:hover { color: #FF0000; }
-        .social-icon.twitter-x:hover { color: #000000; background-color: #fff; border-radius: 4px; padding: 0.1em;} /* X specific style */
-
-
+        .social-icon.twitter:hover { color: #00dddd; } 
+        .social-icon.gh:hover { color: #ffffff; } /* X specific style */
+        .social-icon.gl:hover { color: #ff8800; }
+        .social-icon.sc:hover { color: #a52685; }
         @media (max-width: 768px) {
             .logo {
                 width: 80px;
@@ -146,6 +147,15 @@
         <a href="https://x.com/BlockmanProject" target="_blank" rel="noopener noreferrer" class="social-icon twitter" title="X (Twitter)">
             <i class="fab fa-twitter"></i> <!-- Font Awesome uses fa-xing for X logo, or fa-twitter for old bird -->
             <!-- Or for the newer X logo if available in your FA version, or use an SVG/image -->
+        </a>
+        <a href="https://github.com/SpargatGroup" target="_blank" rel="noopener noreferrer" class="social-icon gh" title="GitHub">
+            <i class="fab fa-github"></i>
+        </a>
+        <a href="https://gitlab.com/Spargat" target="_blank" rel="noopener noreferrer" class="social-icon gl" title="GitLab">
+            <i class="fab fa-gitlab"></i>
+        </a>
+        <a href="https://github.com/SpargatGroup/SpargatSourceCodeWebsite" target="_blank" rel="noopener noreferrer" class="social-icon sc" title="Source Code">
+            <i class="fa-solid fa-download"></i>
         </a>
     </div>
 
